--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,281 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    display: none
+}
+
+p {
+    color: #000;
+    font-size: 12px;
+    font-weight: lighter;
+    line-height: 24px
+}
+
+ul {
+    padding: 0
+}
+
+li {
+    list-style: none
+}
+
+body {
+    background: #fff;
+    left: 80px;
+    margin-right: 80px;
+    position: relative;
+    overflow-x: hidden
+}
+
+.container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap
+}
+
+.navigation {
+    background: transparent;
+    position: fixed;
+    z-index: 99999
+}
+
+.open-nav {
+    background: rgba(0, 0, 0, .5)
+}
+
+.navigation:after {
+    content: '';
+    background: transparent;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: none
+}
+
+.open-nav + .navigation:after {
+    background: rgba(0, 0, 0, .25);
+    display: block
+}
+
+.menu-bg {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100vh;
+    background: transparent;
+    z-index: 11;
+    -webkit-transition: .3s all ease-in-out;
+    transition: .3s all ease-in-out
+}
+
+.open-nav + .menu-bg {
+    display: block;
+    background: rgba(0, 0, 0, .5);
+    -webkit-transition: .9s all ease-in-out;
+    transition: .9s all ease-in-out
+}
+
+.logo-menu {
+    cursor: pointer;
+    display: block;
+    margin: 47vh 0;
+}
+
+.logo-menu svg, .navigation, .open-nav, ul.tabs li > a:after {
+    -webkit-transition: .5s all cubic-bezier(.87, -.41, .19, 1.44);
+    transition: .5s all cubic-bezier(.87, -.41, .19, 1.44)
+}
+
+@-webkit-keyframes shelf {
+    0% {
+        padding-right: 0
+    }
+    20% {
+        padding-right: 20px
+    }
+    40% {
+        padding-right: 10px
+    }
+    60% {
+        padding-right: 15px
+    }
+    80% {
+        padding-right: 5px
+    }
+    100% {
+        padding-right: 0
+    }
+}
+
+@keyframes shelf {
+    0% {
+        padding-right: 0
+    }
+    20% {
+        padding-right: 20px
+    }
+    40% {
+        padding-right: 10px
+    }
+    60% {
+        padding-right: 15px
+    }
+    80% {
+        padding-right: 5px
+    }
+    100% {
+        padding-right: 0
+    }
+}
+
+
+@media (max-width: 770px) {
+    body {
+        margin: 0;
+        left: 0;
+        margin-right: 0;
+        position: relative;
+        overflow-x: hidden;
+    }
+
+    .open-nav {
+        background: transparent
+    }
+
+    .logo-menu {
+        top: 0;
+        left: 60px;
+        position: absolute
+    }
+
+    .logo-menu svg, .logo.mobile-show svg {
+        margin: 17px
+    }
+
+    .navigation {
+        width: 100%
+    }
+
+    .navigation .container, .navigation.open-nav {
+        height: 100%
+    }
+
+    .open-nav + .menu-bg {
+        display: none !important
+    }
+}
+
+ul.tabs {
+    margin: 10%;
+}
+
+ul.tabs li.current:hover > a:after {
+    width: 100%;
+}
+
+ul.tabs li > a:after {
+    content: '';
+    display: block;
+    position: relative;
+    height: 2px;
+    width: 0%;
+    background: #39ccc7;
+    z-index: 1;
+}
+ul.tabs li.no-after > a:after {
+    display: none;
+}
+
+ul.tabs:after {
+    content: '';
+    width: 100%;
+    margin-top: -2px;
+    border-bottom: 0 solid #f0f0f0;
+    z-index: 0;
+}
+
+ul.tabs li > a:hover {
+    cursor: pointer;
+}
+
+ul.tabs li.current > a {
+    color: #37ccc9;
+}
+
+ul.tabs li:hover > a {
+    color: #37ccc9;
+}
+
+ul.tabs li a {
+    color: #191a1a;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    display: block;
+    cursor: pointer;
+}
+
+a:hover {
+    color: #37ccc9;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+a, ul.tabs li {
+    -webkit-transition: .3s all ease-in-out, 0s z-index ease-in-out, 0s border ease-in-out;
+    transition: .3s all ease-in-out,0s z-index ease-in-out,0s border ease-in-out;
+}
+
+ul.tabs li.current:hover > a:after {
+    width: 100%;
+}
+
+ul.tabs li.current>a:after, ul.tabs li:hover>a:after {
+    width: 100%;
+}
+
+li {
+    opacity: 1;
+    -webkit-transition: .5s opacity ease-in-out, .5s transform ease-in-out;
+    -webkit-transition: .5s opacity ease-in-out, .5s -webkit-transform ease-in-out;
+    transition: .5s opacity ease-in-out, .5s -webkit-transform ease-in-out;
+    transition: .5s opacity ease-in-out, .5s transform ease-in-out;
+    transition: .5s opacity ease-in-out, .5s transform ease-in-out, .5s -webkit-transform ease-in-out;
+    -webkit-transition-delay: .35s;
+    transition-delay: .35s;
+    -webkit-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+}
+
+ul.tabs li.current > a {
+    color: #37ccc9;
+}
+
+ul.tabs li a {
+    color: #191a1a;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    display: block;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+a, ul.tabs li {
+    -webkit-transition: .3s all ease-in-out, 0s z-index ease-in-out, 0s border ease-in-out;
+    transition: .3s all ease-in-out, 0s z-index ease-in-out, 0s border ease-in-out;
+}
