--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -214,7 +214,7 @@ ul.tabs li:hover > a {
 }
 
 ul.tabs li a {
-    color: #191a1a;
+    color: white;
     text-decoration: none;
     width: 100%;
     height: 100%;
@@ -262,7 +262,7 @@ ul.tabs li.current > a {
 }
 
 ul.tabs li a {
-    color: #191a1a;
+    color: white;
     text-decoration: none;
     width: 100%;
     height: 100%;
