--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-::-webkit-scrollbar {
-    display: none
-}
-
 p {
     color: #000;
     font-size: 12px;
@@ -286,4 +282,7 @@ header {
 
 .z-1 {
     z-index: -1;
+}
+.login {
+    background-image: url(https://images.unsplash.com/photo-1577495508048-b635879837f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80);
 }
