--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -277,7 +277,8 @@ a, ul.tabs li {
 }
 
 header {
-    background:url('https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background: url('https://images.pexels.com/photos/904616/pexels-photo-904616.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') no-repeat;
+    background-size: 100%;
 }
 
 .z-1 {
