feat: create posts

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,8 @@
+@import "~@fortawesome/fontawesome-free/css/fontawesome.css";
+@import "~@fortawesome/fontawesome-free/css/solid.css";
+@import "~@fortawesome/fontawesome-free/css/brands.css";
+@import "~@fortawesome/fontawesome-free/css/regular.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -276,9 +281,13 @@ a, ul.tabs li {
     transition: .3s all ease-in-out, 0s z-index ease-in-out, 0s border ease-in-out;
 }
 
+.post {
+    width: 80%;
+}
+
 header {
     background: url('https://images.pexels.com/photos/904616/pexels-photo-904616.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 
 .z-1 {
